# tiktok_wrapped_v2

./: .gitignore  Cargo.toml  LICENSE.MD  README.md  package-lock.json
frontend/: package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CountUp.jsx  FAQ.jsx  Slides.jsx  Slideshow.jsx  faq.css  slides.css
frontend/src/utils/: CountUp.jsx
src/: helper_func.rs  lib.rs  main.rs
src/data/: activity.rs  comments.rs  likes.rs  mod.rs  profile.rs  shares.rs  user.rs
